[tool.poetry]
name = "web-hw-2"
version = "0.1.0"
description = "console assistant"
authors = ["Vyacheslav Artemenko <v.a.artemenko1990@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
